<resources>
    <string name="app_name">VoiceTube</string>
    <string name="title_learning">Learning</string>
    <string name="title_blog">Blog</string>
    <string name="title_profile">Profile</string>
    <string name="title_speaking">Speaking</string>
    <string name="title_more">More</string>

    <string name="loading">Loading</string>
    <string name="choose">Choose</string>

    <string name="learning_search">搜索喜欢的影片</string>
    <string name="learning_settings_1">我的单词库</string>
    <string name="learning_settings_2">收藏的影片</string>
    <string name="learning_settings_3">看过的影片</string>

    <string name="learning_tab_levels">Levels</string>
    <string name="learning_tab_channels">Channels</string>
    <string name="learning_tab_accents">Accents</string>
    <string name="learning_tab_videos">Videos</string>

    <string name="all">All</string>
    <string name="level_beginner">Beginner</string>
    <string name="level_intermediate">Intermediate</string>
    <string name="level_advanced">Advanced</string>

    <string name="channel_ted">TED</string>
    <string name="channel_bbc">BBC</string>

    <string name="accent_american">American Accent</string>
    <string name="accent_british">British Accent</string>
    <string name="accent_australian">Australian Accent</string>
    <string name="accent_other">Other Accent</string>

    <string name="video_featured">Featured Videos</string>
    <string name="video_trending">Trending Videos</string>

    <string name="title_levels">Levels</string>
    <string name="title_channels">Channels</string>

    <string name="news_one_title">Dallas police HQ attack: Suspect believed killed during standoff</string>
    <string name="news_one_desc">and ows the dark van ramming the nose of a police car before retreating in reverse</string>

    <string name="news_two_title">Hugh Jackman says coffee can change the world</string>
    <string name="news_two_desc">(CNN)-Hugh Jackman may be finished playing Wolverine in Marvels X-Men films,but the actior still uses his superhuman powers to impact global poverty，Humanitarianism is deeply ingrained in Jackman upbringing. His father, Christopher Jackman, instilled the value of giving through his work as a volunteer accountant for charities serving the developing world.
I suppose he was leading by example, Jackman said. Areas of poverty and extreme poverty, I learned, are not a natural state. It is man-made and solvable.</string>
    <string name="news_three_title">Australia in charge of second Test against West Indies in Jamaica</string>
    <string name="news_three_desc">Australia in charge of second Test against West Indies in Jamaica</string>
    <string name="news_four_title">Sweden royal wedding</string>
    <string name="news_four_desc">嘿~如果觉得这篇文章对您有帮助，希望你能点个赞，你可以通过订阅微信公众号：ITBird，或新浪微博：明桑Anroid 找到我，记得关注博客哦</string>

</resources>
