<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_learning"
        android:icon="@drawable/ic_learning_black_24dp"
        android:title="@string/title_learning" />

    <item
        android:id="@+id/navigation_blog"
        android:icon="@drawable/ic_blog_black_24dp"
        android:title="@string/title_blog" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile_black_24dp"
        android:title="@string/title_profile" />

    <item
        android:id="@+id/navigation_speaking"
        android:icon="@drawable/ic_speaking_black_24dp"
        android:title="@string/title_speaking" />

    <item
        android:id="@+id/navigation_more"
        android:icon="@drawable/ic_more_black_24dp"
        android:title="@string/title_more" />

</menu>
